; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/deparser/extr_deparse.c_DeparseDropStmt.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/deparser/extr_deparse.c_DeparseDropStmt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [41 x i8] c"unsupported drop statement for deparsing\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.TYPE_5__*)* @DeparseDropStmt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @DeparseDropStmt(%struct.TYPE_5__* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.TYPE_5__*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  %4 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %5 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %13 [
    i32 128, label %7
    i32 129, label %10
    i32 131, label %10
    i32 130, label %10
  ]

7:                                                ; preds = %1
  %8 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %9 = call i8* @DeparseDropTypeStmt(%struct.TYPE_5__* %8)
  store i8* %9, i8** %2, align 8
  br label %17

10:                                               ; preds = %1, %1, %1
  %11 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %12 = call i8* @DeparseDropFunctionStmt(%struct.TYPE_5__* %11)
  store i8* %12, i8** %2, align 8
  br label %17

13:                                               ; preds = %1
  %14 = load i32, i32* @ERROR, align 4
  %15 = call i32 @errmsg(i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0))
  %16 = call i32 @ereport(i32 %14, i32 %15)
  br label %17

17:                                               ; preds = %7, %10, %13
  %18 = load i8*, i8** %2, align 8
  ret i8* %18
}

declare dso_local i8* @DeparseDropTypeStmt(%struct.TYPE_5__*) #1

declare dso_local i8* @DeparseDropFunctionStmt(%struct.TYPE_5__*) #1

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errmsg(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
